--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
-/.metadata/
-/.recommenders/
-/Servers/
+*/.metadata/
+*.class
+*target*
+*.jar
+*.war
+*.ear
+*.class
+
+# eclipse specific git ignore
+*.pydevproject
+.project
+.metadata
+.recommenders
+.recommenders/**
+Servers
+Servers/**
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
